Renderizando todos os componentes na tela

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -34,6 +34,7 @@ exclude_patterns:
 - "src/App.test.js"
 - "src/serviceWorker.js"
 - "src/index.css"
+- "node_modules/"
 plugins:
   csslint:
     enabled: true
