--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-scripts": "3.2.0",
     "acorn": ">=7.1.1",
     "minimist": ">=1.2.3",
+    "prop-types": "^15.7.2",
     "serialize-javascript": ">=2.1.1"
   },
   "scripts": {
